# trade-platform

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  RUNNING.md  compose.yaml
.github/workflows/: ci.yml
api-gateway-service/: Cargo.toml
migrations/: 001_create_positions.sql
portfolio-service/: .env  Cargo.toml  README.md  build.rs
portfolio-service/.sqlx/: query-0ed2683b0293568e33e9ee4299dfef3e529c067b45390dca27b061ad7b4a1b8f.json  query-88f84a6fd17fbc767fe1d0845dcc524c21e17c02c2f1d232e015fbd7ce241b3f.json  query-ceb0f3c9c764c39858cb565b8439a8004e9474709f26161d78fdb0800bd8dde3.json  query-e0f403a015e5aaf0ea70bcf810140948e4608d744a9359b98a8a5a0b344af219.json
portfolio-service/src/: config.rs  error.rs  lib.rs  main.rs
portfolio-service/src/consumer/: consumer_trait.rs  error.rs  kafka.rs  mod.rs  types.rs
portfolio-service/src/db/: error.rs  mod.rs  model.rs  postgres.rs
portfolio-service/src/grpc/: portfolio_service.rs
portfolio-service/src/health/: mod.rs  router.rs
portfolio-service/src/models/: position.rs
proto/: portfolio.proto  trade.proto
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  models.rs  types.rs
trade-service/: .env  Cargo.toml  README.md  build.rs
trade-service/src/: config.rs  error.rs  lib.rs  main.rs
trade-service/src/grpc/: mod.rs  trade_service.rs
trade-service/src/health/: state.rs
trade-service/src/models/: mod.rs  trade.rs  trade_executed.rs  types.rs
trade-service/src/producer/: error.rs  factory.rs  kafka.rs  mod.rs  producer_trait.rs  stub.rs
trade-service/tests/: trade_service_integration.rs
