[package]
name = "portfolio-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
envy = "0.4.2"
prost = "0.14.3"
prost-types = "0.14.3"
rdkafka = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
async-trait = "0.1.89"
chrono = "0.4.44"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "rust_decimal", "chrono"] }
rust_decimal = "1.40.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
axum = "0.8.8"

[build-dependencies]
tonic-prost-build = "0.14.4"

[dev-dependencies]
temp-env = "0.3.6"
tokio-test = "0.4.5"
