[package]
name = "trade-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
prost = "0.14.3"
prost-types = { version = "0.14.3"}
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic = "0.14.4"
tonic-prost = "0.14.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "json"] }

[build-dependencies]
tonic-prost-build = "0.14.4"

[dev-dependencies]
serial_test = "3.4.0"
temp-env = "0.3.6"
tokio-test = "0.4.5"
